--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta description="ceci est un site dont vous êtes le heros, on incarne un perso et on lui fait vivre une aventure">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
     <link rel="stylesheet" href="styleaccueil.css" type="text/css">
@@ -10,7 +11,7 @@
 
 <body>
     <header>
-        <img src="images/banner.png" alt="banniere" class="banniere">
+        <img src="images/banner.webp" alt="banniere" class="banniere">
         <nav class="menu_general">
             <ul class="menu_liste">
                 <li class="enregistrer"><a href="connexion_contact/inscription.html">s'enregistrer</a></li>
@@ -25,7 +26,7 @@
     <main class="articles_accueil">
         <h1 class="titre_1_Accueil">Actualités</h1>
         <article class="article_accueil">
-            <img src="images/chevalier1.png" alt="chevalier" class="image70">
+            <img src="images/chevalier1.webp" alt="chevalier" class="image70">
             <p>ajout du guerrier :
                 Armé d’une épée massive et d’un bouclier gravé, le guerrier est le pilier de toute escouade. Il encaisse
                 les coups, protège ses alliés et charge sans peur dans la mêlée. Sa force brute et sa discipline
@@ -35,7 +36,7 @@
                 d’attaques à distance</p>
         </article>
         <article class="article_accueil">
-            <img src="images/mage1.png" alt="mage" class="image70">
+            <img src="images/mage1.webp" alt="mage" class="image70">
             <p> ajout du mage :
                 Drapé dans une robe étoilée, le mage canalise les forces élémentaires avec une précision redoutable. Son
                 savoir ancestral lui permet de manipuler le feu, la glace et l’électricité pour anéantir ses ennemis à
@@ -47,7 +48,7 @@
             </p>
         </article>
         <article class="article_accueil">
-            <img src="images/necro1.png" alt="necromancien" class="image70">
+            <img src="images/necro1.webp" alt="necromancien" class="image70">
             <p>Ajout du nécromancien : Entouré d’un halo sombre, le nécromancien invoque les morts pour servir sa
                 volonté. Ses incantations obscures drainent la vie de ses ennemis et corrompent leur esprit. Il manipule
                 la frontière entre la vie et la mort, semant la terreur sur son passage. <br>
